# schema-builder

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml
gui/: index.html  package-lock.json  package.json  vite.config.js
gui/src/: icons.ts  main.ts
gui/src/components/app-root/: app-root.ts
gui/src/components/common/: fa-icon-picker.ts  fa-icon.ts  markdown-viewer.ts  regex-tester.ts
gui/src/components/schema-viewer/: code-preview.ts  json-schema-viewer.ts  property-editor.ts  property-field.ts  property-viewer.ts  schema-section.ts  styles.css  types.ts
gui/src/pages/: SchemaPage.ts
gui/src/styles/: main.css
nf_schema_builder/: __init__.py  cli.py  config.py  http.py  logger.py  schema.py  utils.py  validation.py
tests/: conftest.py  main.nf  test-schema-full.json  test-schema.json  test_cli.py  test_config.py  test_http.py  test_logger.py  test_schema.py  test_utils.py
